# Reframe

./: .codacy.yml  .coverage-thresholds.json  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRACTS.md  DESKTOP.md  Dockerfile.allinone  Dockerfile.api  Dockerfile.web  Dockerfile.worker  GOAL.md  Makefile  NOTICE  QUALITY-CHARTER.md  RAW_PROMPT.md  README.md  SECURITY.md  TODO.md  WIRING-T1.md  WIRING-T2.md  WIRING-T3.md  WIRING-T4A.md  WIRING-T4B.md  WIRING-T5.md  WIRING-U1.md  WIRING-U2.md  WIRING-U3.md  WIRING-U4.md  WIRING-U5.md  biome.json  codecov.yml  electron-builder.yml  osv-scanner.toml  pyproject.toml  (+3 more)
apps/desktop-electron/sidecar/: pyproject.toml
apps/desktop-electron/sidecar/media_studio/: __main__.py  ffmpeg.py  handlers.py  jobs.py  library.py  protocol.py  rpc.py  settings_store.py  tools_resolver.py  util.py
apps/desktop-electron/sidecar/media_studio/assets/: __init__.py  manager.py  manifest.py  rpc.py
apps/desktop-electron/sidecar/media_studio/features/: boundary.py  brandkit.py  caption.py  caption_remotion.py  convert.py  cues.py  emphasis.py  feedback.py  fillers.py  media_compat.py  reframe.py  reframe_claudeshorts.py  select.py  shortmaker.py  shorts.py  subtitles.py  timeline.py  tracks.py  tracks_audio.py  transcribe.py  zoom.py
apps/desktop-electron/sidecar/media_studio/features/tts/: __init__.py  align.py  dub.py  (+6 more)
apps/desktop-electron/sidecar/runtime_setup/: bootstrap.py  requirements-chatterbox.txt
apps/desktop-electron/sidecar/tests/: conftest.py  test_assets.py  test_boundary.py  test_brandkit.py  test_caption.py  test_caption_remotion.py  test_convert.py  test_cues.py  test_emphasis.py  test_feedback.py  test_ffmpeg.py  test_fillers.py  test_handlers.py  test_jobs.py  test_library.py  test_media_compat.py  test_provider.py  test_reframe.py  test_reframe_claudeshorts.py  test_rpc.py  test_runner.py  test_runtime_setup.py  test_select.py  test_settings_store.py  test_shortmaker.py  test_shorts.py  test_subtitles.py  test_timeline.py  test_tools_resolver.py  test_tracks.py  test_tracks_audio.py  test_transcribe.py  test_translation.py  test_tts_align.py  test_tts_dub.py  test_tts_engines.py  test_tts_kokoro.py  test_tts_voices.py  test_zoom.py
sidecar/: pyproject.toml  requirements.lock.txt
sidecar/contract/: __init__.py  generate.py  registry.py  schema.py  spec.py  validate.py
sidecar/media_studio/: __main__.py  engine.py  ffmpeg.py  handlers.py  job_store.py  jobs.py  keepcopy.py  library.py  lineage.py  pathsafe.py  protocol.py  relink.py  rpc.py  settings_store.py  tools_resolver.py  util.py
sidecar/media_studio/assets/: __init__.py  manager.py  manifest.py  rpc.py
sidecar/media_studio/features/: _lightasd_infer.py  _safetensors_loader.py  apply_engine.py  aspect.py  audio_saliency.py  audiomix.py  batch.py  best_frame.py  boundary.py  brandkit.py  caption.py  caption_karaoke.py  caption_override.py  caption_polish.py  caption_polish_backend.py  caption_remotion.py  chyron_safezone.py  chyron_safezone_backend.py  convert.py  ctc_align.py  ctc_align_backend.py  cues.py  diarize.py  diarize_backend.py  director.py  director_eval.py  director_op_engines.py  diversity.py  edit_plan_prompt.py  edit_validate.py  emphasis.py  export_presets.py  feedback.py  fillers.py  health.py  hook_card.py  media_compat.py  motion.py  nle_export.py  ocr_list.py  (+47 more)
sidecar/media_studio/features/_lightasd/: __init__.py  asd.py  model.py
sidecar/media_studio/features/_lightasd/s3fd/: __init__.py  box_utils.py  nets.py
sidecar/media_studio/features/_transnetv2/: __init__.py  transnetv2_pytorch.py
sidecar/media_studio/features/_vinet_s/: __init__.py  model.py  model_utils.py
sidecar/media_studio/features/tts/: __init__.py  align.py  chatterbox.py  chatterbox_runner.py  dub.py  edgetts.py  engine.py  kokoro.py  voices.py
sidecar/media_studio/handlers/: __init__.py  _capabilities.py  _services.py  _shared.py  _wire.py  ai_ops.py  composition.py  director_ops.py  library_ops.py  media_ops.py  providers_ops.py  shortmaker_ops.py  system_ops.py  vision_ops.py
sidecar/media_studio/models/: ai_cache.py  ai_job.py  budget.py  catalog.py  consent.py  edit_plan.py  embedder.py  key_pool.py  key_pool_status.py  local_detect.py  model_recommend.py  ollama_meta.py  openrouter_usage.py  presets.py  provider.py  provider_pricing.py  provider_usage_availability.py  routing_policy.py  routing_resolve.py  runner.py  secrets.py  spend_ledger.py  translation.py  usage.py
sidecar/media_studio/scripts/: verthor_reframe.sh
sidecar/runtime_setup/: __init__.py  bootstrap.py  generate_hashed_lock.py  requirements-chatterbox.txt  requirements-sidecar.txt
sidecar/tests/: _director_fakes.py  _import_hygiene.py  conftest.py  e2e_ai2_mock_model.py  test_ai_cache.py  test_ai_job.py  test_apply_engine.py  test_aspect.py  test_assets.py  test_assets_extra.py  test_assets_profiles.py  test_audio_saliency.py  test_audiomix.py  test_batch.py  test_best_frame.py  test_boundary.py  test_boundary_property.py  test_brandkit.py  test_budget.py  test_caption.py  test_caption_karaoke.py  test_caption_karaoke_flatten.py  test_caption_override.py  test_caption_polish.py  test_caption_position.py  test_caption_remotion.py  test_catalog.py  test_catalog_adapter.py  test_ce_sidecar_media_studio_assets_manager_py.py  test_ce_sidecar_media_studio_features_batch_py.py  test_ce_sidecar_media_studio_features_recipes_py.py  test_ce_sidecar_media_studio_features_shortmaker_py.py  test_ce_sidecar_media_studio_handlers_composition_py.py  test_ce_sidecar_media_studio_handlers_director_ops_py.py  test_ce_sidecar_media_studio_handlers_library_ops_py.py  test_ce_sidecar_media_studio_handlers_vision_ops_py.py  test_ce_sidecar_media_studio_handlers_wire_py.py  test_ce_sidecar_media_studio_models_catalog_py.py  test_ce_sidecar_runtime_setup_bootstrap_py.py  test_chyron_safezone.py  (+177 more)
sidecar/tests/e2e/: README.md  _tiny_sidecar.py  real_pipeline_smoke.py  test_hook_card_burn.py  test_karaoke_burn.py  test_nasty_inputs.py
(+1082 files in other folders)
