[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "media-studio-sidecar"
version = "0.1.0"
description = "Local media-studio Python compute sidecar (stdio JSON-RPC)."
requires-python = ">=3.12"
license = { text = "MIT" }

# CONTRACT-NOTE: §7 stack choices. These declare the runtime deps but are NOT
# installed by build agents (HARD RULE: no pip install). The human installs
# after the build. Versions are floors, not pins, kept lean per §6.
dependencies = [
  "faster-whisper>=1.0",   # §7 transcription (large-v3-turbo)
  "scenedetect>=0.6",      # §5 PySceneDetect scene cuts for boundary snapping
  "httpx>=0.27",           # HTTP client for the llama.cpp OpenAI-compatible server (§7)
  # P2 (T2, A6 lesson 5: PINNED). ⚠ human: verify current releases at install
  # time. chatterbox-tts/torch must NOT be added here (isolated env asset only).
  "kokoro-onnx==0.5.0",    # A4: the onnx build — NEVER the torch `kokoro` package
  "onnxruntime==1.27.0",   # kokoro-onnx backend (or onnxruntime-gpu, same pin)
  "edge-tts==7.2.8",       # hosted TTS engine (network only at runtime)
  # F3: PRIMARY system-RAM source for the device advisor (cross-platform), with
  # an OS-stdlib fallback (Win32 GlobalMemoryStatusEx / POSIX sysconf) behind the
  # RamProbe seam. PINNED (A6 lesson 5) so the probe number is reproducible.
  "psutil==7.2.2",         # total system RAM (system_advisor.default_ram_probe)
  # L5: whole-file content hash for hash-verified relink (DESIGN §3.2). BLAKE3 is
  # SIMD/multithread-parallel — fast on multi-GB sources; digests are stored
  # algorithm-prefixed (``blake3:…``) so a future SHA-256/C2PA path can coexist.
  "blake3>=1.0",           # L5 hash-verified re-point/relink (algorithm-prefixed)
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "hypothesis>=6.0",   # property/fuzz tests (deterministic CI profile in conftest)
]
# R1 multi-speaker reframe GPU tier (the vendored S3FD + LR-ASD active-speaker
# stack in media_studio/features/_lightasd/). These are NOT installed by build agents and
# NOT in the CI gate env (the unit tests are heavy-ML-free); a human installs them
# on the GPU host. PINNED to the GPU-validated versions (A6 lesson 5). ⚠ torch /
# torchvision / torchaudio must be installed from the CUDA wheel index to get the
# +cuXXX builds, e.g.:
#   pip install "media-studio-sidecar[reframe-gpu]" \
#     --extra-index-url https://download.pytorch.org/whl/cu124
reframe-gpu = [
  "torch==2.6.0",                 # GPU-validated LR-ASD runtime (cu124 build via the torch index)
  "torchvision==0.21.0",          # paired with torch 2.6.0
  "torchaudio==2.6.0",            # paired with torch 2.6.0
  "opencv-python-headless==4.13.0.92",  # frame I/O + face-crop ops (headless: no GUI libs)
  "python_speech_features==0.6",  # MFCC features for the ASD audio frontend
  "scipy==1.18.0",                # face-track interpolation + median filter + wav read
]

[project.scripts]
# The sidecar entry point. The ASSEMBLED process (media_studio.__main__) imports
# the composition root (handlers.register_all), which registers every §2 feature
# handler onto protocol.METHODS, then runs the stdio JSON-RPC loop. NOTE: this is
# media_studio.__main__:main, NOT media_studio.rpc:main (the bare core with only
# ping/job.* registered — launching that wires no feature handlers).
media-studio-sidecar = "media_studio.__main__:main"

[tool.setuptools]
packages = [
  "media_studio",
  "media_studio.models",
  "media_studio.features",
  "media_studio.features.tts",
  "media_studio.features._lightasd",
  "media_studio.features._lightasd.s3fd",
  "media_studio.assets",
]

[tool.setuptools.package-data]
# Ship the vendored LR-ASD MIT license alongside the vendored code (the MIT
# terms require the copyright + permission notice to travel with the source).
"media_studio.features._lightasd" = ["LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# OPT-IN E2E SUITE: the heavy autonomous end-to-end tests (real ffmpeg / real
# model server / mock-model-over-a-socket) are marked ``e2e`` and DESELECTED
# from the default gate via ``addopts`` below, so the standard 100%-coverage
# run never installs ML deps, never spawns servers, and stays fast. Run the
# opt-in suite explicitly with ``pytest -m e2e`` (see .github/workflows/e2e.yml).
addopts = "-m 'not e2e'"
markers = [
  "unit: fast, dependency-free unit tests (no heavy-ML imports)",
  "integration: tests that exercise multiple modules together",
  "e2e: opt-in heavy end-to-end tests (real ffmpeg/model/socket); excluded from the default gate",
]

# --------------------------------------------------------------------------- #
# Mutation testing (mutmut >= 3.6) — Wave-2a, NON-BLOCKING NIGHTLY ONLY.
#
# This is a SIDECAR-side complement to the 100% branch-coverage gate (gate:3).
# Line/branch coverage proves a line *executed*; it does NOT prove a test would
# FAIL if that line's logic were wrong. mutmut perturbs the source (flips
# operators, swaps constants, drops statements) and checks that some test then
# fails ("kills" the mutant). A surviving mutant = a coverage-blind spot: code
# the suite runs but does not actually assert on.
#
# SCOPE IS DELIBERATELY NARROW (Wave-2a brief): only HIGH-VALUE, PURE-LOGIC
# modules whose behaviour is worth proving — protocol dispatch, the ffmpeg
# command/arg builders, scene-boundary snapping, the timeline cue algebra, the
# Ken-Burns zoom math, the SRT/VTT caption parsers, and the persisted spend
# ledger. Heavy-ML / I/O / provider modules are intentionally EXCLUDED: their
# mutants are mostly equivalent or untestable without real models, so they would
# only add noise to the score.
#
# This config is INERT for the blocking gate: nothing in quality.yml invokes
# mutmut, and mutmut is NOT added to the lockfiles / sidecar runtime deps. It is
# run exclusively by the separate, non-blocking .github/workflows/mutation.yml
# (workflow_dispatch + nightly cron). Run locally from the sidecar/ directory:
#
#     mutmut run            # mutate + test (the targets below)
#     mutmut results        # surviving mutants, grouped by module
#
# The mutation-score TARGET (kill rate) is documented alongside the coverage
# thresholds in the repo-root .coverage-thresholds.json (key: "mutation").
# --------------------------------------------------------------------------- #
[tool.mutmut]
# Pure-logic modules worth mutating (paths are relative to sidecar/).
source_paths = [
  "media_studio/protocol.py",
  "media_studio/ffmpeg.py",
  "media_studio/features/boundary.py",
  "media_studio/features/timeline.py",
  "media_studio/features/zoom.py",
  "media_studio/features/caption.py",
  "media_studio/features/subtitles.py",
  "media_studio/models/spend_ledger.py",
]
# Run ONLY the unit tests that exercise the mutated modules. This keeps the
# mutmut run fast AND avoids importing the heavy-ML test modules (faster-whisper,
# torch, ...) whose deps are not installed in the lean test environment.
pytest_add_cli_args_test_selection = [
  "tests/test_protocol_stateful.py",
  "tests/test_ffmpeg.py",
  "tests/test_boundary.py",
  "tests/test_boundary_property.py",
  "tests/test_timeline.py",
  "tests/test_zoom.py",
  "tests/test_zoom_caption_property.py",
  "tests/test_caption.py",
  "tests/test_subtitles.py",
  "tests/test_spend_ledger.py",
]
# Deselect the opt-in heavy e2e suite (mirrors [tool.pytest.ini_options].addopts,
# which mutmut's test-selection args bypass).
pytest_add_cli_args = ["-m", "not e2e"]
