[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "media-studio-sidecar"
version = "0.1.0"
description = "Local media-studio Python compute sidecar (stdio JSON-RPC)."
requires-python = ">=3.12"
license = { text = "MIT" }

# CONTRACT-NOTE: §7 stack choices. These declare the runtime deps but are NOT
# installed by build agents (HARD RULE: no pip install). The human installs
# after the build. Versions are floors, not pins, kept lean per §6.
dependencies = [
  "faster-whisper>=1.0",   # §7 transcription (large-v3-turbo)
  "scenedetect>=0.6",      # §5 PySceneDetect scene cuts for boundary snapping
  "httpx>=0.27",           # HTTP client for the llama.cpp OpenAI-compatible server (§7)
  # P2 (T2, A6 lesson 5: PINNED). ⚠ human: verify current releases at install
  # time. chatterbox-tts/torch must NOT be added here (isolated env asset only).
  "kokoro-onnx==0.4.9",    # A4: the onnx build — NEVER the torch `kokoro` package
  "onnxruntime==1.20.1",   # kokoro-onnx backend (or onnxruntime-gpu, same pin)
  "edge-tts==7.0.0",       # hosted TTS engine (network only at runtime)
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[project.scripts]
# The sidecar entry point. The ASSEMBLED process (media_studio.__main__) imports
# the composition root (handlers.register_all), which registers every §2 feature
# handler onto protocol.METHODS, then runs the stdio JSON-RPC loop. NOTE: this is
# media_studio.__main__:main, NOT media_studio.rpc:main (the bare core with only
# ping/job.* registered — launching that wires no feature handlers).
media-studio-sidecar = "media_studio.__main__:main"

[tool.setuptools]
packages = [
  "media_studio",
  "media_studio.models",
  "media_studio.features",
  "media_studio.features.tts",
  "media_studio.assets",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "unit: fast, dependency-free unit tests (no heavy-ML imports)",
  "integration: tests that exercise multiple modules together",
]
